Revert "Scrap the inspector (#176)"
This reverts commit 41a1bfd143463ac7706a4861b971ba88d4087d89.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ Carthage/Build
 Carthage/Checkouts
 Carthage/Cartfile.resolved
 
+# Inspector files
+Inspector/node_modules
+Inspector/package-lock.json
+
 # Modules map recreated on each build
 Modules/module.modulemap
 
